--- a/templates/base-list.html
+++ b/templates/base-list.html
@@ -13,7 +13,7 @@
                     <li><a href="/product/girls/skirt/">{% trans 'SKIRT' %}</a></li>
                     <li><a href="/product/girls/pants">{% trans 'PANTS' %}</a></li>
                     <li><a href="/product/girls/cardigan">{% trans 'CARDIGAN' %}</a></li>
-                    <li><a href="/product/girls/accessories">{% trans 'ACCESSORIES' %}</a></li>
+                    <li><a href="/product/accessories/">{% trans 'ACCESSORIES' %}</a></li>
                     <li><a href="/lookbook/">{% trans 'LOOKBOOK' %}</a></li>
                 </ul>
             </li>
@@ -24,13 +24,13 @@
                     <li><a href="/product/boys/shirt/">{% trans 'SHIRT' %}</a></li>
                     <li><a href="/product/boys/pants/">{% trans 'PANTS' %}</a></li>
                     <li><a href="/product/boys/cardigan">{% trans 'CARDIGAN' %}</a></li>
-                    <li><a href="/product/boys/accessories/">{% trans 'ACCESSORIES' %}</a></li>
+                    <li><a href="/product/accessories/">{% trans 'ACCESSORIES' %}</a></li>
                     <li><a href="/lookbook/">{% trans 'LOOKBOOK' %}</a></li>
                 </ul>
             </li>
             <li><a href="/lookbook/">{% trans 'LOOKBOOK' %}</a></li>
-            <li><a href="/product/sales/">{% trans 'SALES' %}</a></li>
-            <li><a href="#">{% trans 'ACCESSORIES' %}</a>
+            <li><a href="/sales/">{% trans 'SALES' %}</a></li>
+            <li><a href="/product/accessories/">{% trans 'ACCESSORIES' %}</a>
                 <ul class="nav">  
                     <li><a href="#">MINI BOBI</a></li>
                     <li><a href="#">ANA</a></li>
