--- a/static/minibobi/css/minibobi.css
+++ b/static/minibobi/css/minibobi.css
@@ -165,13 +165,13 @@ a.active{
 	border: none;
 	padding: 10px;
 	float: right;
-	margin-left: 1s0px;
+	margin-left: 10px;
 }
 .top-mobile>.button-group>a>span{
 	display: inline-block;
-	font-size: 2.4rem;
+	font-size: 1.7rem;
 	color: #333;
-	line-height: 2.4rem;
+	line-height: 1.7rem;
 }
 .mobile-nav {
 	display: none;
@@ -299,7 +299,9 @@ aside{
 	text-decoration: underline;
 }
 .item{
-	padding: 10px;
+	padding-top: 10px;
+	padding-left: 0px;
+	padding-right: 0px;
 	color:#9e9e9e;
 	float:left;
 }
@@ -682,5 +684,9 @@ td tr{
     }
     .cart_btn a.reverse>span{
     	width: 100%;
+    }
+
+    div[role=main]{
+    	padding:0px;
     }
 }
