--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                         {% endif %}
                         </p>
                         </div>
-                        <div class="cart_btn">
+                        <div class="cart_btn list_btn">
                         <a href= "/product/{{ p.id }}/" style="margin: 0 auto;"><span>{% trans "VIEW PRODUCT" %}</span></a>
                         </div>
                     </div>
