--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,15 @@
     <meta name="description" content="{% block description_meta %}Mini Bobi, French & Comfortable Clothing For Kids{% endblock %}">
     <meta name="keywords" content = "{% block keywords_meta %}Mini Bobi,French,Comfortable Clothing For Kids{% endblock %}">
     <meta name="author" content="Minibobi">
-    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link rel="apple-touch-icon" sizes="57x57" href="/static/minibobi/images/favicons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/static/minibobi/images/favicons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/static/minibobi/images/favicons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/minibobi/images/favicons/apple-touch-icon-76x76.png">
+    <link rel="icon" type="image/png" href="/static/minibobi/images/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/static/minibobi/images/favicons/favicon-32x32.png" sizes="32x32">
+    <meta name="msapplication-TileColor" content="#da532c">
 
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/static/fontello/fontello.css" rel="stylesheet" type="text/css">
     <link href="/static/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/static/tooltipster/css/tooltipster.css" />
