--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
     <link rel="apple-touch-icon" sizes="76x76" href="/static/minibobi/images/favicons/apple-touch-icon-76x76.png">
     <link rel="icon" type="image/png" href="/static/minibobi/images/favicons/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/static/minibobi/images/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" href="/static/minibobi/images/favicons/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/minibobi/images/favicons/favicon.ico" type="image/x-icon" />
     <meta name="msapplication-TileColor" content="#da532c">
 
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
