--- a/templates/base.html
+++ b/templates/base.html
@@ -147,17 +147,17 @@
             <nav>
                 <ul class="nav col-md-4 col-sm-4 col-xs-6 foot-nav foot-nav-left">
                     <li>MINI BOBI</li>
-                    <li><a href="#">{% trans "About" %}</a></li>
-                    <li><a href="#">{% trans "Contact" %}</a></li>
+                    <li><a href="/about/">{% trans "About" %}</a></li>
+                    <li><a href="/contact/">{% trans "Contact" %}</a></li>
                     <li><a href="#">{% trans "Blog" %}</a></li>
                     <li><a href="#">{% trans "Press review" %}</a></li>
                     <li><a href="#">{% trans "Stockists" %}</a></li>
                 </ul>
                 <ul class="nav col-md-4 col-sm-4 col-xs-6 foot-nav foot-nav-middle">
                     <li>E-SHOP</li>
-                    <li><a href="#">{% trans "Payment" %}</a></li>
-                    <li><a href="#">{% trans "Shipping" %}</a></li>
-                    <li><a href="#">{% trans "Return" %}</a></li>
+                    <li><a href="/notice/">{% trans "Payment" %}</a></li>
+                    <li><a href="/notice/">{% trans "Shipping" %}</a></li>
+                    <li><a href="/notice/">{% trans "Return" %}</a></li>
                     <li><a href="#">{% trans "General terms and conditions of sales" %}</a></li>
                 </ul>
                 <ul class="nav col-md-4 col-sm-4 col-xs-12 foot-nav foot-nav-right">
