--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                         </p>
                         </div>
                         <div class="cart_btn list_btn">
-                        <a href= "/product/{{ p.id }}/" style="margin: 0 auto;"><span>{% trans "VIEW PRODUCT" %}</span></a>
+                        <a href= "/product/{{ p.id }}/"><span>{% trans "VIEW PRODUCT" %}</span></a>
                         </div>
                     </div>
                     {% empty %}
