--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,5 +3,45 @@
 {% block title %}CONTACT MINIBOBI{% endblock %}
 
 {% block main %}
+                {% load i18n %}
+                <div class="col-md-4 col-xs-12 col-sm-12 contact">
+                    <h3>{% trans "CONTACT US" %}</h3>
+                   <form role="form" id='form' action='/contact/' method='post' class="form-horizontal">
+                     {% csrf_token %} 
+                      <div class="form-group">
+                        <label for="id_name">{% trans "Contact Name" %}</label>
+                        <input type="text" class="form-control" id="id_name" name='name' placeholder="Enter your name">
+                      </div>
+                      <div class="form-group">
+                        <label for="id_email">{% trans "Contact E-mail" %}</label>
+                        <input type="text" class="form-control" id="id_email" name = 'email' placeholder="Enter you contact E-mail">
+                      </div>
+                      <div class="form-group">
+                        <label for="id_subject">{% trans "Subject" %}</label>
+                        <input type="text" class="form-control" id="id_tel" name = 'subject' placeholder="Enter the subject">
+                      </div>
+                      <div class="form-group">
+                        <label for="id_content">{% trans "Content" %}</label>
+                        <textarea class="form-control" id = 'id_content' name = 'content' rows="3"></textarea>
+                      </div>
+	                    <div class="cart_btn">
+	                    	<a href= "javascript:void(0)" class="submit"><span>{% trans "Submit" %}</span></a>
+	                    </div>
+                    </form>
+                </div>
 
+{% endblock %}
+{% block js %}
+<script type="text/javascript">
+	$(function(){
+		$(".submit").click(function(){
+			$(".contact>form").submit();
+		});
+	});
+	var status = {{ status }};
+	if (status == 1){
+		alert("Thanks for your message, we'll contact you soon!");
+		window.location.href="/";
+	}
+</script>
 {% endblock %}
