--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                     <li>&nbsp;&nbsp;&nbsp;</li>
                     <li><a href="#"><span class="sns icon-social-twitter"></span></a></li>
                     <li>&nbsp;&nbsp;&nbsp;</li>
-                    <li><a href="#"><span class="sns icon-social-facebook"></span></a></li>
+                    <li><a href="http://www.facebook.com/minibobiparis" target="_blank"><span class="sns icon-social-facebook"></span></a></li>
                     <li>&nbsp;&nbsp;&nbsp;</li>
                     <li><a><span>|</span></a></li>
                 </ul>
