--- a/templates/product.html
+++ b/templates/product.html
@@ -20,7 +20,7 @@
                         <div class="col-md-12 col-xs-12 col-sm-12 thumbs" style="margin-top:5px;">
                         {% for i in product.images.all %}
                         <div class="col-md-4 col-xs-4 col-sm-4" style="padding-left:0;">
-                            <img src="{{ i.thumb_middle }}" class="img-responsive" style="float:left;">
+                            <img src="{{ i.thumb_middle }}" class="img-responsive thumb" style="float:left;">
                         </div>
                         {% endfor %}
                         </div>
