--- a/static/minibobi/css/minibobi.css
+++ b/static/minibobi/css/minibobi.css
@@ -305,6 +305,7 @@ aside{
 	color:#9e9e9e;
 	float:left;
 	text-align: center;
+	margin-bottom: 20px;
 }
 .item .cover{
 	padding:0 10px;
@@ -317,7 +318,7 @@ aside{
 	margin: 0 auto;
 }
 .item .brief{
-	min-height: 120px;
+	min-height: 100px;
 }
 .item .brief>p{
 	font-size: 14px;
@@ -393,12 +394,14 @@ aside{
 	background-color: #c5c5c5;
 	color:#fff;
 }
-
 .footer{
-	padding-top:2em;
 	position: relative;
 	z-index: 0;
-	padding-left: 2em;
+	padding: 2em;
+}
+.footer>.container{
+	padding-left:75px;
+	padding-right: 75px;
 }
 .foot-nav >li{
 	font-weight: bold;
@@ -572,7 +575,15 @@ aside{
 	margin-left:0px;
 	cursor: pointer;
 }
-.product .size ul li .select{
+.product .size ul li span.inactive{
+	display: block;
+	padding: 3px 4px;
+	border: 1px dashed #ccc;
+	margin-left:0px;
+	background-color: #eee;
+	cursor: text;
+}
+.product .size ul li span.select{
 	border: 2px solid #fcc4ac;
 }
 .error_message span{
@@ -718,4 +729,8 @@ td tr{
     div[role=main]{
     	padding:0px;
     }
+	.footer>.container{
+		padding-left:15px;
+		padding-right: 15px;
+	}
 }
