--- a/templates/base.html
+++ b/templates/base.html
@@ -35,18 +35,11 @@
             <header>
             <div class="col-lg-12 col-sm-12 col-xs-12 navbar-header top hidden-xs">
                 {% load i18n %}
-                 <form action="{% url 'set_language' %}" method="post" class="form-inline language-form">
-                {% csrf_token %}
-                <input name="next" type="hidden" value="{{ redirect_to }}" />
-                <select name="language">
-                {% get_language_info_list for LANGUAGES as languages %}
-                {% for language in languages %}
-                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
-                    {{ language.name_local }} ({{ language.code }})
-                </option>
-                {% endfor %}
-                </select>
-                </form> 
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a href="/setlang/?language=zh-cn&next={{request.path}}">简体中文</a></li>
+                    <li><a>|</a></li>
+                    <li><a href="/setlang/?language=en&next={{request.path}}">English</a></li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right ">
                 {% load i18n %}
                     <li><a><span>{% trans "CALL US AT" %} 131231</span></a></li>
