--- a/templates/product.html
+++ b/templates/product.html
@@ -58,8 +58,12 @@
                     <div class="size col-md-12 col-xs-12 col-sm-12">
                         <label>{% trans "SIZE" %}:</label>
                         <ul class="options">
-                            {% for s in product.size.all %}
-                            <li option_value = "{{ s.id }}"><span class="size-span">{{ s.size }}</span></li>
+                            {% for s in product.sizes.all %}
+                                {% if s.stock != 0 %}
+                                <li option_value = "{{ s.id }}"><span class="active">{{ s.size }}</span></li>
+                                {% else %}
+                                <li option_value = "{{ s.id }}"><span class="inactive">{{ s.size }}</span></li>
+                                {% endif %}
                             {% endfor %}
                         </ul>
                     <div class="error_message col-md-12 col-xs-12 col-sm-12" style="display:none;">
@@ -91,7 +95,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 col-xs-12 col-sm-12 rec">
-                    <p style="text-decoration:underline; font-size:1rem;margin-left:15px;">{% trans "RECOMMEND PRODUCT" %}</p>
+                    <p style="text-decoration:underline; font-size:1rem;margin-left:15px;">{% trans "RECOMMENDED PRODUCT" %}</p>
                     {% for p in products %}
                     <div class="col-md-3 col-xs-6 col-sm-6">
                        <a href="/product/{{ p.id }}"><img src="{{ p.get_cover.thumb_middle }}" class="img-responsive"></a>
