--- a/templates/product.html
+++ b/templates/product.html
@@ -43,9 +43,7 @@
 
                     </div>
                     <ul class="link col-md-12 col-xs-12 col-sm-12">
-                        <li><a href="#">{% trans "COMPOSITION" %}</a></li>
-                        <li><a>|</a></li>
-                        <li><a href="#">{% trans "SHIPPING" %}</a></li>
+                        <li><a href="/notice/">{% trans "SHIPPING" %}</a></li>
                         <li><a>|</a></li>
                         <li><a href="#">{% trans "SIZE GUIDE" %}</a></li>
                     </ul>
