--- a/static/minibobi/css/minibobi.css
+++ b/static/minibobi/css/minibobi.css
@@ -45,6 +45,25 @@ h1,h2,h3,h4,h5,h6{
 h4,h5,h6{
 	font-weight: normal;
 }
+h1{
+	font-size: 48px;
+}
+h2{
+	font-size: 36px;
+}
+h3{
+	font-size: 30px;
+}
+h4{
+	font-size: 26px;
+}
+h5{
+	font-size: 22px;
+}
+h6{
+	font-size: 18px;
+}
+
 a{
 	font-size: 0.875rem;
 }
@@ -130,8 +149,9 @@ a.active{
 	border: none;
 	border-bottom:1px dashed #ccc;
 }
-.search a{
-	border-bottom: 1px dashed #ccc;
+.search button{
+	border:none;
+	background: transparent;
 	padding-bottom: 5px;
 }
 .navbar{
@@ -419,7 +439,7 @@ aside{
 	text-decoration: underline;
 }
 .foot-nav-right >li{
-	padding-bottom: 3em;
+	padding-bottom: 1em;
 }
 .foot-nav-right > li > a{
 	font-weight: bold;
@@ -672,13 +692,40 @@ td tr{
 }
 /*--------------contact-------------------*/
 .contact{
-	float: none;
 	margin: 0 auto;
 }
-.contact>.form-horizontal>.form-group{
-	margin-left: 0px;
+.contact>h3{
+	text-decoration: underline;
 }
-
+.contact .text{
+	position: absolute;
+	top: 30px;
+	left:30px;
+	text-align: center;
+}
+.contact>.form-horizontal>.form-group{
+	margin:0px;
+	padding: 0px;
+	margin-bottom: 15px;
+}
+.contact>form textarea{
+	background-color: #ebebeb;
+	color: #d5d5d5;
+	border:none;
+}
+.contact>form input{
+	background-color: #ebebeb;
+	color: #d5d5d5;
+	border: none;
+}
+.contact .contact_btn{
+	margin-top: 15px;
+}
+.contact .contact_btn>a{
+	padding: 10px 15px;
+	background-color: #000;
+	color: #fff;
+}
 /*-----------queries------------*/
 @media screen and (max-width:768px){
 	.logo a{
@@ -693,6 +740,15 @@ td tr{
 }
 
 @media all and (max-width: 768px) { /* screen size until 1000px */
+	h4{
+		font-size: 18px;
+	}
+	h5{
+		font-size: 16px;
+	}
+	h6{
+		font-size: 14px;
+	}
     .cover > .banner img{
     	width: 50%;
     }
