--- a/templates/about.html
+++ b/templates/about.html
@@ -6,10 +6,6 @@
                     <h3>{% trans "ABOUT" %}</h3>
                 </div>
                 <div class="col-md-12 about">
-                    <div class="col-md-5">
-                        <span>
-                            {{ page.content }}
-                        </span>
-                    </div>
+                    <img src="/static/minibobi/static/css/minibobi.css" class="img-responsive">
                 </div>
 {% endblock %}
