--- a/templates/about.html
+++ b/templates/about.html
@@ -6,6 +6,6 @@
                     <h3>{% trans "ABOUT" %}</h3>
                 </div>
                 <div class="col-md-12 about">
-                    <img src="/static/minibobi/images/minibobi.css" class="img-responsive">
+                    <img src="/static/minibobi/images/about.jpg" class="img-responsive">
                 </div>
 {% endblock %}
