--- a/templates/base.html
+++ b/templates/base.html
@@ -168,7 +168,7 @@
                     <li><a href="/notice/">{% trans "Payment" %}</a></li>
                     <li><a href="/notice/">{% trans "Shipping" %}</a></li>
                     <li><a href="/notice/">{% trans "Return" %}</a></li>
-                    <li><a href="#">{% trans "General terms and conditions of sales" %}</a></li>
+                    <li><a href="/legal/">{% trans "General terms and conditions of sales" %}</a></li>
                 </ul>
                 <ul class="nav col-md-4 col-sm-4 col-xs-12 foot-nav foot-nav-right">
                     <li><a href="#">{% trans "SIZE GUIDE" %}</a></li>
