--- a/templates/product.html
+++ b/templates/product.html
@@ -45,7 +45,7 @@
                     <ul class="link col-md-12 col-xs-12 col-sm-12">
                         <li><a href="/notice/">{% trans "SHIPPING" %}</a></li>
                         <li><a>|</a></li>
-                        <li><a href="#">{% trans "SIZE GUIDE" %}</a></li>
+                        <li><a href="#">{% trans "RETURNS" %}</a></li>
                     </ul>
                     <ul class="color col-md-12 col-xs-12 col-sm-12">
                         <li option_value="{{ product.color.id }}">
@@ -82,13 +82,13 @@
                         <ul>
                             <li><a href="#tab1">{% trans "DETAILS" %}</a></li>
                             <li><a>|</a></li>
-                            <li><a href="#tab2">{% trans "RETURNS" %}</a></li>
+                            <li><a href="#tab2">{% trans "SIZE GUIDE" %}</a></li>
                         </ul>
                         <div id="tab1" class="tab-content">
                             {{ product.long_description|linebreaksbr }}
                         </div>
                         <div id="tab2" class="tab-content">
-                            {% trans "No Messages" %}
+                            <img src="/static/minibobi/images/sizeguide.png" class="img-responsive" />
                         </div>
                     </div>
                 </div>
