--- a/templates/product.html
+++ b/templates/product.html
@@ -45,7 +45,7 @@
                     <ul class="link col-md-12 col-xs-12 col-sm-12">
                         <li><a href="/notice/">{% trans "SHIPPING" %}</a></li>
                         <li><a>|</a></li>
-                        <li><a href="#">{% trans "RETURNS" %}</a></li>
+                        <li><a href="/notice/">{% trans "RETURNS" %}</a></li>
                     </ul>
                     <ul class="color col-md-12 col-xs-12 col-sm-12">
                         <li option_value="{{ product.color.id }}">
