--- a/templates/base.html
+++ b/templates/base.html
@@ -233,6 +233,10 @@
             });
         });
 </script>
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fd75a73657221123fb096569bfa4fc7ae' type='text/javascript'%3E%3C/script%3E"));
+</script>
 {% block js %}
 {% endblock %}
 
