--- a/templates/base-list.html
+++ b/templates/base-list.html
@@ -20,6 +20,7 @@
             <li><a href="/product/boys/">{% trans 'BOYS' %}</a>
                 <ul class="nav">  
                     <li><a href="/product/boys/tshirt/">{% trans 'TSHIRT' %}</a></li>
+                    <li><a href="/product/boys/short/">{% trans 'SHORT' %}</a></li>
                     <li><a href="/product/boys/polo/">{% trans 'POLO' %}</a></li>
                     <li><a href="/product/boys/shirt/">{% trans 'SHIRT' %}</a></li>
                     <li><a href="/product/boys/pants/">{% trans 'PANTS' %}</a></li>
