--- a/templates/base.html
+++ b/templates/base.html
@@ -68,9 +68,9 @@
                     <li><a><span>|</span></a></li>
                     <li><a href="#"><span class="sns icon-barcode"></span></a></li>
                     <li>&nbsp;&nbsp;&nbsp;</li>
-                    <li><a href="#"><span class="sns icon-social-weibo"></span></a></li>
+                    <li><a href="http://www.weibo.com/5212691907/"><span class="sns icon-social-weibo"></span></a></li>
                     <li>&nbsp;&nbsp;&nbsp;</li>
-                    <li><a href="#"><span class="sns icon-social-twitter"></span></a></li>
+                    <li><a href="http://www.renren.com/848623103/profile"><span class="sns icon-social-renren"></span></a></li>
                     <li>&nbsp;&nbsp;&nbsp;</li>
                     <li><a href="http://www.facebook.com/minibobiparis" target="_blank"><span class="sns icon-social-facebook"></span></a></li>
                     <li>&nbsp;&nbsp;&nbsp;</li>
