--- a/templates/base.html
+++ b/templates/base.html
@@ -234,7 +234,7 @@
 <script>
         $(document).ready(function() {
             $('.icon-barcode').tooltipster({
-                content: $('<strong>Here is the barcode!</strong>')
+                content: $('<strong><img src="/static/minibobi/images/wechat.png" class="img-responsive"></strong>')
             });
         });
 </script>
