--- a/templates/base.html
+++ b/templates/base.html
@@ -162,7 +162,7 @@
                     </li>
                     <div id="mc_embed_signup">
 <!-- Begin MailChimp Signup Form -->
-        <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+        <link href="/static/minibobi/css/slim-081711.css" rel="stylesheet" type="text/css">
         <style type="text/css">
             #mc_embed_signup{background:transparent; clear:left; font:14px Helvetica,Arial,sans-serif;padding: 0px; }
             /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
