--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,20 @@
     <link href="/static/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/static/tooltipster/css/tooltipster.css" />
     <link href="/static/minibobi/css/minibobi.css" rel="stylesheet" type="text/css">
-
+    <link href="/static/minibobi/css/slim-081711.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+        #mc_embed_signup{background:transparent; clear:left; font:14px Helvetica,Arial,sans-serif;padding: 0px; }
+        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        #mc_embed_signup>form{
+            padding: 5px 0px;
+        }
+        #mc_embed_signup>form>input.email{
+            width: 100%;
+            border-radius: 5px;
+            border: 1px solid #999;
+        }
+    </style>
 
     {% block css %}
     {% endblock %}
@@ -162,27 +175,15 @@
                     </li>
                     <div id="mc_embed_signup">
 <!-- Begin MailChimp Signup Form -->
-        <link href="/static/minibobi/css/slim-081711.css" rel="stylesheet" type="text/css">
-        <style type="text/css">
-            #mc_embed_signup{background:transparent; clear:left; font:14px Helvetica,Arial,sans-serif;padding: 0px; }
-            /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-            #mc_embed_signup>form{
-                padding: 5px 0px;
-            }
-            #mc_embed_signup>form>input.email{
-                width: 100%;
-                border-radius: 5px;
-                border: 1px solid #999;
-            }
-        </style>
+
 <!--End mc_embed_signup-->
                     <form action="//minibobi.us8.list-manage.com/subscribe/post?u=22d4aea709dafafb0d82ee7f0&amp;id=65f0657d80" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         
                         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;"><input type="text" name="b_22d4aea709dafafb0d82ee7f0_65f0657d80" tabindex="-1" value=""></div>
-                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                        <div class="clear">
+                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                     </form>
                     </div>
                 </ul>
@@ -251,6 +252,7 @@ document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3
 
   ga('create', 'UA-57097623-1', 'auto');
   ga('send', 'pageview');
+
 </script>
 {% block js %}
 {% endblock %}
